Added calendar available dates feature